# explain-mcp-searver

./: .env.sample  README.md  pyproject.toml
Les1-How-to-use-llm/: llm-calling-with-chain.py  llm-calling.py
Les2-What-is-AI-Agent/: a.py  how-to-use-ai-agent.py  use-ai-agent.py
Les2-What-is-AI-Agent/bonus-how-to-use-work-ai-agent.py/: how-to-work-ai-agent.py
Les3-mcp-server-use/: langchain-ai-agent.py  mcp-server.py
test/: client.py
