[project]
name = "explain-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.25",
    "langchain-google-genai>=2.1.4",
    "langchain-ollama>=0.3.2",
    "langchain-openai>=0.3.16",
    "python-dotenv>=1.1.0",
]
